[package]
name = "store"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { workspace = true }
bytes = { workspace = true }
client = { path = "../client" }
config = { path = "../config" }
core_affinity = { workspace = true }
crossbeam = { workspace = true }
derivative = { workspace = true }
flatbuffers = { workspace = true }
futures = { workspace = true }
io-uring = { workspace = true }
lazy_static = { version = "1.4.0" }
libc = { workspace = true }
log = { workspace = true }
minstant = { workspace = true }
mockall = { workspace = true, optional = true }
model = { path = "../model" }
nix = { workspace = true }
num_enum = { workspace = true }
observation = { path = "../observation" }
percentage = { version = "0.1.0" }
prometheus = { workspace = true }
protocol = { path = "../protocol" }
rand = { workspace = true }
rocksdb = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-uring = { workspace = true }
util = { path = "../util" }
uuid = { workspace = true }

[dev-dependencies]
cargo-llvm-cov = { workspace = true }
chrono = { workspace = true }
codec = { path = "../codec" }
criterion = { workspace = true }
env_logger = { workspace = true }
mockall = { workspace = true }
tempfile = { workspace = true }
transport = { path = "../transport" }
uuid = { workspace = true }

[features]
default = []
mock = ["mockall"]

[[bench]]
name = "benchmark"
harness = false
