[package]
name = "test-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = { workspace = true }
slog-async =  { workspace = true }
slog-term =  { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-uring = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true}
crc32fast = { workspace = true }
transport = { path = "../transport" }
codec = { path = "../codec" }
model = { path = "../model" }
protocol = { path = "../protocol" }
flatbuffers = { workspace = true }


[dev-dependencies]
crc = { workspace = true }