[package]
name = "tiered-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
opendal = { workspace = true }
store = { path = "../store" }
tokio = { workspace = true }
tokio-uring = { workspace = true }
mockall = { workspace = true }
