[package]
name = "tiered-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
flatbuffers = { workspace = true }
log = { workspace = true }
mockall = { workspace = true }
model = { path = "../model" }
opendal = { workspace = true }
protocol = { path = "../protocol" }
store = { path = "../store" }
tokio = { workspace = true }
tokio-uring = { workspace = true }
util = { path = "../util" }
