[package]
name = "tool"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
license = { workspace = true }
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
io-uring = { workspace = true }
libc = { workspace = true }
minstant = { workspace = true }
