[package]
name = "transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { path = "../codec" }
bytes = { workspace = true }
slog = { workspace = true }
tokio-uring = { workspace = true }

[dev-dependencies]
slog-async = { workspace = true }
slog-term = { workspace = true }
tokio = { workspace = true}
cargo-llvm-cov = { workspace = true }