[package]
name = "transport"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
license = { workspace = true }
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
codec = { path = "../codec" }
local-sync = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
tokio-uring = { workspace = true }

[dev-dependencies]
cargo-llvm-cov = { workspace = true }
chrono = { workspace = true }
env_logger = { workspace = true }
protocol = { path = "../protocol" }
tokio = { workspace = true }
ulog = { path = "../ulog", features = ["env"] }
