[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
tokio = { workspace = true }
tokio-uring = { workspace = true }
bytes = { workspace = true }

uuid = { workspace = true}
crc32fast = { workspace = true }

prometheus = {workspace = true}
procfs = "0.15.1"
lazy_static = {version = "1.4.0"}
libc = "0.2.141"
hyper = { version = "0.14.25", features = ["full"] }


[dev-dependencies]
crc = { workspace = true }