[package]
name = "util"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
license = { workspace = true }
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
clap = { workspace = true }
crc32fast = { workspace = true }
hyper = { version = "0.14.25", features = ["full"] }
lazy_static = { version = "1.4.0" }
libc = "0.2.141"
log = { workspace = true }
procfs = "0.15.1"
prometheus = { workspace = true }
monoio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
crc = { workspace = true }
