[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
client = { path = "../../components/client" }
codec = { path = "../../components/codec" }
config = { path = "../../components/config" }
model = { path = "../../components/model" }
clap = { workspace = true }
log =  { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = ["full"]  }
tokio-uring = { workspace = true }
futures = { workspace = true }
replication = { path = "../../components/replication" }
thiserror = { workspace = true }
flatbuffers = { workspace = true }
protocol = { path = "../../components/protocol" }
util = { path = "../../components/util" }
lazy_static = { workspace = true }
jni = "0.21.1"
num_cpus = "1.15.0"
env_logger = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
test-util = { path = "../../components/test-util" }
minitrace = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]


[profile.release]
opt-level = 2
debug = false
strip = "symbols"
debug-assertions = false
codegen-units = 1
overflow-checks = true
lto = true