[package]
name = "frontend"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
license = { workspace = true }
edition = "2021"

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
client = { path = "../../components/client" }
codec = { path = "../../components/codec" }
config = { path = "../../components/config" }
crossbeam = { workspace = true }
flatbuffers = { workspace = true }
futures = { workspace = true }
jni = "0.21.1"
lazy_static = { workspace = true }
local-sync = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
minitrace = { workspace = true }
minitrace-jaeger = "0.4.1"
minstant = { workspace = true }
model = { path = "../../components/model" }
num_cpus = "1.15.0"
protocol = { path = "../../components/protocol" }
replication = { path = "../../components/replication" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-uring = { workspace = true }
util = { path = "../../components/util" }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
env_logger = { workspace = true }
ulog = { path = "../../components/ulog", features = ["env"] }

[lib]
crate-type = ["cdylib", "lib"]

[[bench]]
name = "sample_benchmark"
harness = false
