[package]
name = "front-end-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { path = "../../components/codec" }
model = { path = "../../components/model" }
clap = { workspace = true }
slog =  { workspace = true }
slog-async =  { workspace = true }
slog-term =  { workspace = true }
bytes = { workspace = true }
tokio = { version = "1", features = ["full"] }
futures = { workspace = true }