[package]
name = "front-end-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { path = "../../components/codec" }
model = { path = "../../components/model" }
clap = { workspace = true }
slog =  { workspace = true }
slog-async =  { workspace = true }
slog-term =  { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
flatbuffers = { workspace = true }
protocol = { path = "../../components/protocol" }
util = { path = "../../components/util" }
lazy_static = { workspace = true }

[dev-dependencies]
test-util = { path = "../../components/test-util" }
minitrace = { workspace = true }